--- a/styles/dark.css
+++ b/styles/dark.css
@@ -5,8 +5,34 @@
 */
 
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --accent-color: #FF0070;
+  --menu-color: #FF0070;
+  --question-color: #FF0070;
+  --header-footer-title-max-shadow: #FF0070;
+  --text-color: #F1B2CE;
+  --main-title-color: #DB00FF;
+  --title-decor-color: #000028;
+  --main-color: #000028;
+  --rec-visibility: visible;
+  --bg-image: url(../images/cover-image-dark.png);
+  background-image: var(--bg-image);
+}
+
+
+@media(prefers-color-scheme: dark) {
+  :root {
+    --accent-color: #FF0070;
+    --menu-color: #FF0070;
+    --question-color: #FF0070;
+    --header-footer-title-max-shadow: #FF0070;
+    --text-color: #F1B2CE;
+    --main-title-color: #DB00FF;
+    --title-decor-color: #000028;
+    --main-color: #000028;
+    --bg-image: url(../images/cover-image-dark.png);
+    --rec-visibility: visible;
+  }
+  .page {
+    background-image: url(../images/cover-image-dark.png);
+  }
 }
