--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,10 @@ body {
   min-inline-size: 375px;
   max-inline-size: 1440px;
   margin: 0 auto;
+  font-size: 18px;
+  font-family: "IBM Plex Mono", "PT Mono", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 h1,
