--- a/styles/light.css
+++ b/styles/light.css
@@ -4,9 +4,42 @@
   переключая тему
 */
 
+
 .page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --accent-color: #ff8dcb;
+  --menu-color: #353430;
+  --question-color: #353430;
+  --text-color: #353430;
+  --main-title-color: #ffc2e6;
+  --title-decor-color: #353430;
+  --main-color: #fff1f7;
+  --header-footer-title-max-shadow: #FF0070;
+  --bg-image: url(../images/cover-image-light.png);
+  --rec-visibility: hidden;
+  background-image: var(--bg-image);
 }
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --accent-color: #ff8dcb;
+    --menu-color: #353430;
+    --question-color: #353430;
+    --text-color: #353430;
+    --main-title-color: #ffc2e6;
+    --title-decor-color: #353430;
+    --main-color: #fff1f7;
+    --header-footer-title-max-shadow: #FF0070;
+    --rec-visibility: hidden;
+    --bg-image: url(../images/cover-image-light.png);
+  }
+
+  .page {
+    background-image: url(../images/cover-image-light.png);
+  }
+
+  .decoration_rec {
+    visibility: var(--rec-visibility);
+  }
+}
+
+
