--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,399 @@
 
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  background-color: var(--main-color);
+  background-image: var(--bg-image);
+  background-position: center;
+  background-size: cover;
+  background-repeat: repeat;
+  background-attachment: fixed;
+  padding: var(--page-padding);
 }
+
+.header {
+  min-block-size: 100vh;
+  max-inline-size: 100%;
+  display: grid;
+  gap: 50px;
+  grid-template-rows: 1fr min-content 1fr;
+  /*justify-content: center;
+  align-items: center;*/
+  padding-bottom: var(--page-padding);
+}
+
+/*декор: уголки и rec */
+.decorated-zone {
+  position: relative;
+}
+
+.decorated-zone::before {
+  content: "";
+  position: absolute;
+  top: 1px;
+  right: 1px;
+  width: 25px;
+  height: 25px;
+  border-top: 1px solid  var(--menu-color);
+  border-right: 1px solid  var(--menu-color);
+}
+
+.decorated-zone::after {
+  content: "";
+  position: absolute;
+  bottom: 20px;
+  left: 1px;
+  width: 25px;
+  height: 25px;
+  border-bottom: 1px solid  var(--menu-color);
+  border-left: 1px solid  var(--menu-color);
+}
+
+.decoration_rec {
+  position: absolute;
+  top: 0;
+  right: 30px;
+  color: var(--menu-color);
+  font-size: 18px;
+  text-transform: uppercase;
+  visibility: var(--rec-visibility);
+}
+
+.decoration_rec::after {
+  content: "";
+  position: absolute;
+  top: 9px;
+  left: 44px;
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  background-color: var(--menu-color);
+  filter: drop-shadow(0px 0px 4px var(--menu-color));
+}
+
+/*меню в шапке*/
+.header__theme-menu {
+  display: flex;
+  align-self: flex-end;
+  justify-content: flex-end;
+  padding-bottom: 22px;
+}
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 13px;
+  align-items: flex-end;
+  color: var(--menu-color);
+}
+
+.header__theme-menu-button {
+  background-color: transparent;
+  display: flex;
+  width: 70px;
+  height: 26px;
+  padding: 0 13px;
+  text-transform: lowercase;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  color: var(--menu-color);
+  border: none;
+  text-align: center;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: 100%;
+}
+
+.header__theme-menu-button:hover {
+  outline: 1px solid currentColor;
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  outline: none;
+  border-bottom: 1px solid currentColor;
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid currentColor;
+  pointer-events: none;
+}
+
+.header__title {
+  font-size: clamp(7.25rem, 5.7694rem + 6.3174vw, 9.8125rem);
+  color: var(--main-title-color);
+  text-shadow: 4px 4px 0 var(--accent-color);
+  line-height: 82.5%;
+}
+
+.header__paragraph {
+  max-inline-size: max(355px, calc((100% - 2 * var(--page-padding)) / 1.9));
+  max-block-size: 117px;
+  justify-self: flex-end;
+  align-self: start;
+  font-family: inherit;
+  font-size: inherit;
+  font-style: normal;
+}
+
+.title-decor {
+  color: var(--title-decor-color);
+  background-color: var(--accent-color);
+  font-weight: 700;
+  line-height: 130%;
+}
+
+/*основной контент*/
+.main {
+  max-width: 100%;
+  display: grid;
+  gap: 50px;
+  font-size: 18px;
+  font-family: inherit;
+  font-weight: 400;
+  font-style: normal;
+  color: var(--text-color);
+  line-height: 130%;
+  margin-block-end: 10px;
+}
+
+.paragraph {
+  display: grid;
+  gap: 20px;
+}
+
+.paragraph__question {
+  color: var(--question-color);
+  font-weight: 700;
+  font-size: inherit;
+  font-family: inherit;
+}
+
+.paragraph__answer {
+  display: flex;
+  flex-direction: column;
+}
+
+.paragraph__answer_second_type {
+  gap: 20px;
+}
+
+.paragraph__title {
+  font-weight: 700;
+  font-size: inherit;
+  font-family: inherit;
+  margin-block-end: 10px;
+}
+
+.paragraph__answer .paragraph__text:not(:last-of-type) {
+  margin-block-end: 20px;
+}
+
+.paragraph__advice_title {
+  margin-block-end: 20px;
+}
+
+.paragraph__advice {
+  font-weight: 400;
+  margin-block-end: 10px;
+}
+
+.text__link {
+  text-decoration: none;
+  text-shadow: 1px 1px 0 var(--accent-color);
+}
+
+.text__link:hover {
+  text-decoration: underline;
+}
+
+.text__link:focus {
+  outline: none;
+}
+
+.text__link:focus-visible {
+  outline: 1px solid currentColor;;
+}
+
+/*картинки*/
+.gallery {
+  display: grid;
+  gap: var(--page-padding);
+}
+.gallery_card {
+  display: grid;
+  gap: var(--page-padding);
+}
+
+.image {
+  width: 100%;
+}
+
+.footer {
+  min-block-size: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: var(--page-padding);
+}
+
+.footer__title {
+  font-size: clamp(7.25rem, 5.7694rem + 6.3174vw, 9.8125rem);
+  color: var(--main-title-color);
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+@media (width>=650px) {
+ :root{
+  --page-padding: 20px;
+  }
+  .page {
+    gap: calc(2 * var(--page-padding));
+  }
+
+  .header__title {
+    margin-inline-start: -18px;
+  }
+
+  .paragraph__first_type {
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .main {
+    margin-block-end: var(----block-end-margin);
+  }
+  .gallery_card {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    max-block-size: 100vw;
+  }
+
+  .image {
+    inline-size: 100%;
+    block-size: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+  .img_sunset {
+    grid-column: 1/3;
+    grid-row: 1/2;
+  }
+  .img_ice-cream {
+    grid-column: 3/4;
+    grid-row: 1/3;
+  }
+
+  .img_tape {
+    grid-column: 1/2;
+    grid-row: 2/5;
+  }
+
+  .img_books {
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+
+  .img_street {
+    grid-column: 2/4;
+    grid-row: 3/5;
+  }
+}
+
+@media (650px<=width<900px) {
+  .header {
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 55px;
+    /*justify-content: center;
+    align-items: center;*/
+  }
+
+  .main {
+    gap: 80px;
+  }
+
+  .paragraph__second_type {
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: repeat(2, min-content);
+  }
+
+  .paragraph__second_type .paragraph__question {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+
+  .paragraph__second_type .paragraph__answer {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 4;
+  }
+
+  .gallery {
+    margin-block-end: 20px;
+  }
+}
+
+@media (width>=900px) {
+
+  .header {
+    gap: 100px;
+  }
+  .header__theme-menu {
+    align-self: flex-start;
+    justify-content: center;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+    gap: 13px;
+    align-items: center;
+    color: var(--accent-color);
+  }
+
+  .decorated-zone::after{
+    bottom: 40px;
+  }
+  .main {
+    gap: 80px;
+  }
+  .paragraph__second_type {
+    grid-template-columns: repeat(3, calc((100vw - 4 * var(--page-padding))/3));
+    grid-template-rows: repeat(2, minmax(min-content, max-content));
+  }
+
+  .paragraph__second_type_max_device {
+    inline-size: calc((100vw - 4 * var(--page-padding))/3);
+  }
+
+  .paragraph__second_type .paragraph__question {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+
+  .paragraph__second_type .paragraph__answer {
+    flex-direction: row;
+    gap: var(--page-padding);
+    grid-row: 2/3;
+    grid-column: 1/4;
+  }
+
+  .footer__title,
+  .header__title {
+    text-shadow: 2px 2px 0 var(--header-footer-title-max-shadow);
+  }
+}
+
+
+
+
