--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@ body {
   max-inline-size: 1440px;
   margin: 0 auto;
   font-size: 18px;
-  font-family: "IBM Plex Mono", "PT Mono", sans-serif;
+  font-family: "IBM Plex Mono", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
