--- a/styles/style.css
+++ b/styles/style.css
@@ -21,8 +21,6 @@
   display: grid;
   gap: 50px;
   grid-template-rows: 1fr min-content 1fr;
-  /*justify-content: center;
-  align-items: center;*/
   padding-bottom: var(--page-padding);
 }
 
@@ -152,7 +150,7 @@
 
 /*основной контент*/
 .main {
-  max-width: 100%;
+  max-inline-size: 100vw;
   display: grid;
   gap: 50px;
   font-size: 18px;
@@ -232,7 +230,7 @@
   gap: var(--page-padding);
 }
 
-.image {
+.content_image {
   width: 100%;
 }
 
@@ -277,32 +275,32 @@
     max-block-size: 100vw;
   }
 
-  .image {
+  .content_image {
     inline-size: 100%;
     block-size: 100%;
     object-fit: cover;
     object-position: center;
   }
-  .img_sunset {
+  .image:first-of-type {
     grid-column: 1/3;
     grid-row: 1/2;
   }
-  .img_ice-cream {
+  .image:nth-of-type(2) {
     grid-column: 3/4;
     grid-row: 1/3;
   }
 
-  .img_tape {
+  .image:nth-of-type(3) {
     grid-column: 1/2;
     grid-row: 2/5;
   }
 
-  .img_books {
+  .image:nth-of-type(4) {
     grid-column: 2/3;
     grid-row: 2/3;
   }
 
-  .img_street {
+  .image:last-of-type {
     grid-column: 2/4;
     grid-row: 3/5;
   }
@@ -312,8 +310,6 @@
   .header {
     grid-template-rows: 1fr 1fr 1fr;
     gap: 55px;
-    /*justify-content: center;
-    align-items: center;*/
   }
 
   .main {
@@ -375,7 +371,11 @@
   }
 
   .paragraph__second_type_max_device {
-    inline-size: calc((100vw - 4 * var(--page-padding)) / 3);
+    max-inline-size: calc((100vw - 4 * var(--page-padding)) / 3);
+  }
+
+  .paragraph__second_type .paragraph__answer .paragraph__text {
+    margin-block-end: 20px;
   }
 
   .paragraph__second_type .paragraph__question {
