--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,10 +9,10 @@
 body {
   min-inline-size: 375px;
   max-inline-size: 1440px;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   font-size: 18px;
-  font-family: "IBM Plex Mono", sans-serif;
+  font-family: "IBM Plex Mono", monospace;
   font-weight: 400;
   font-style: normal;
 }
